--- a/calendario_pruebas.html
+++ b/calendario_pruebas.html
@@ -134,7 +134,7 @@
                         <option value="Arte">Arte</option>
                         <option value="Tecnología">Tecnología</option>
                         <option value="Música">Música</option>
-                        <option value="Religión">Música</option>
+                        <option value="Religión">Religión</option>
                     </select>
                 </div>
             </div>
@@ -877,3 +877,4 @@
 </body>
 
 </html>
+
