--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                         <option value="Arte">Arte</option>
                         <option value="Tecnología">Tecnología</option>
                         <option value="Música">Música</option>
+                        <option value="Religión">Religión</option>
                     </select>
                 </div>
             </div>
@@ -874,4 +875,5 @@
         });
     </script>
 </body>
+
 </html>
